[workspace]
members = [
  "chain",
  "iost-derive",
  "keys",
  "rpc",
]

#[patch.crates-io]
#sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#frame-metadata = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
#subxt = { git = "https://github.com/bifrost-finance/substrate-subxt.git", package = "substrate-subxt" }