[package]
name = "rpc"
version = "0.1.0"
authors = ["Qiannan Lyu <lvqiannan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
iost-chain = { git = "https://github.com/hsqlu/rs-iost", branch = "master" }
futures = "0.3.5"
once_cell = "1.4.0"
serde_json = "1.0"
sp-core = "2.0.0"
subxt = { version = "0.13", package = "substrate-subxt" }
