[package]
name = "rpc"
version = "0.1.0"
authors = ["Qiannan Lyu <lvqiannan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
iost-chain = { path ="../chain" }
futures = "0.3.6"
once_cell = "1.4.0"
serde = { version = "1.0", features = ["derive", "alloc"] }
serde_json = "1.0"
#sp-core = "2.0.0"
#subxt = { version = "0.13", package = "substrate-subxt" }
tokio = { version = "0.2.6", features = ["macros"] }
reqwest = { version = "0.10.0", features = ["json"] }
